feat : :sparkles: 대기오염 정보 가져오기

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+    //db
+    implementation 'org.postgresql:postgresql:42.7.4'
+
     //lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
