--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'org.springframework.boot' version '3.3.4'
     id 'io.spring.dependency-management' version '1.1.6'
     id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.25'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.25'
 }
 
 group = 'com.kibong.weather'
@@ -35,6 +36,9 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    //json
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3'
 
     //db
     implementation 'org.postgresql:postgresql:42.7.4'
