--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
     id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.25'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.25'
+
 }
 
 group = 'com.kibong.weather'
@@ -36,6 +37,10 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    //jdsl
+    implementation("com.linecorp.kotlin-jdsl:jpql-dsl:3.5.3")
+    implementation("com.linecorp.kotlin-jdsl:jpql-render:3.5.3")
 
     //json
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3'
