feat     : :sparkles: kotlin jdsl config 및 기본적인 쿼리 작성

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     //jdsl
     implementation("com.linecorp.kotlin-jdsl:jpql-dsl:3.5.3")
     implementation("com.linecorp.kotlin-jdsl:jpql-render:3.5.3")
+    implementation 'com.linecorp.kotlin-jdsl:hibernate-kotlin-jdsl-jakarta:2.2.1.RELEASE'
+    implementation 'com.linecorp.kotlin-jdsl:spring-data-kotlin-jdsl-starter-jakarta:2.2.1.RELEASE'
 
     //json
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3'
